# flask-admin-tablerui

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: new_release.yml  publish.yml  tests.yml
examples/: quickstart.py
flask_admin_tabler/: __init__.py  json_widget.py  theme.py
flask_admin_tabler/static/admin/css/tabler/: admin.css
flask_admin_tabler/templates/tabler/admin/: base.html  layout.html  lib.html
flask_admin_tabler/templates/tabler/admin/file/: list.html
flask_admin_tabler/templates/tabler/admin/model/: create.html  details.html  edit.html  inline_list_base.html  layout.html  list.html  row_actions.html
flask_admin_tabler/templates/tabler/admin/model/modals/: details.html
flask_admin_tabler/templates/tabler/admin/rediscli/: console.html
tests/: test_theme.py
