[project]
name = "flask-admin-tabler"
version = "2026.2.2"
description = "Tabler UI theme for Flask-Admin"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<4.0"
keywords = [
    "flask",
    "flask-admin",
    "tabler",
    "admin-interface",
    "theme",
    "template",
]
dependencies = [
    "flask-admin>=2.0.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "isort",
]

[project.urls]
Source = "https://github.com/mariofix/flask-admin-tablerui"

[tool.poetry]
packages = [{include = "flask_admin_tabler"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 310


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["flask_admin_tabler"]
fix = true
show-fixes = true
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle error
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycodestyle warning
]

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false
split-on-trailing-comma = true
combine-as-imports = true
